# when

./: .gitignore  .travis.yml  Justfile  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
docs/: Calculate the Moon Phase.md
src/when/: __init__.py  __main__.py  cli.py  config.py  core.py  lunar.py  main.py  timezones.py  tznames.json  utils.py  when.py
src/when/db/: __init__.py  client.py  make.py
tests/: citiesTest.txt  conftest.py  test_when.py
tests/data/: admin1  cities  holidays  json  timezones
