[metadata]
license_file = LICENSE

[flake8]
max-line-length = 100

[coverage:run]
branch = True
source = when
omit = **/migrations/**

[coverage:html]
directory = build/coverage
title = When Coverage

[coverage:report]
# Regexes for lines to exclude from consideration
ignore_errors = True
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug
    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError
    # Don't complain if non-runnable code isn't run:
    if __name__ == .__main__.:
